@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.4-2
-Date: 2022-06-21
+Date: 2022-06-22
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Matrix-authors@R-project.org
