@@ -16,6 +16,7 @@
 \alias{coerce,RsparseMatrix,vector-method}
 \alias{coerce,matrix,RsparseMatrix-method}
 \alias{coerce,numLike,RsparseMatrix-method}
+\alias{diag,RsparseMatrix-method}
 \alias{t,RsparseMatrix-method}
 %
 \description{The \code{"RsparseMatrix"} class is the virtual class of
