@@ -25,7 +25,6 @@
 \alias{coerce,sparseMatrix,sparseVector-method}
 \alias{coerce,table,sparseMatrix-method}
 \alias{cov2cor,sparseMatrix-method}
-\alias{diag,sparseMatrix-method}
 \alias{dim<-,sparseMatrix-method}
 \alias{format,sparseMatrix-method}
 \alias{log,sparseMatrix-method}
